--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: "libraries.gradle"
 
 buildscript {
   repositories {
     jcenter()
+    maven { url "https://plugins.gradle.org/m2/" }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.0-alpha5'
-
+    classpath 'com.android.tools.build:gradle:2.1.' + '0-alpha5'
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    classpath 'net.ltgt.gradle:gradle-apt-plugin:0.4'
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
