--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,5 +1,12 @@
 apply plugin: 'java'
+apply plugin: "net.ltgt.apt"
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile rootProject.ext.libraries.rxjava
+  compile rootProject.ext.libraries.dagger
+  apt rootProject.ext.libraries.daggerCompiler
+
+  testCompile testLibraries.junit
+  testCompile testLibraries.mockito
+  testApt rootProject.ext.libraries.daggerCompiler
 }
