--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -1,14 +1,20 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.3"
+  compileSdkVersion rootProject.ext.compileSdkVersion
+  buildToolsVersion rootProject.ext.buildToolsVersion
 
   defaultConfig {
     minSdkVersion 21
     targetSdkVersion 23
     versionCode 1
     versionName "1.0"
+    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+  }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_7
+    targetCompatibility JavaVersion.VERSION_1_7
   }
   buildTypes {
     release {
@@ -19,7 +25,18 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  testCompile 'junit:junit:4.12'
-  compile 'com.android.support:appcompat-v7:23.2.1'
+  compile project(':domain')
+  compile rootProject.ext.libraries.supportAnnotations
+  apt rootProject.ext.libraries.daggerCompiler
+
+  testCompile testLibraries.junit
+  testCompile testLibraries.mockito
+  testApt rootProject.ext.libraries.daggerCompiler
+
+  androidTestCompile rootProject.ext.testLibraries.junit
+  androidTestCompile rootProject.ext.testLibraries.runner
+  androidTestCompile rootProject.ext.testLibraries.mockito
+  androidTestCompile rootProject.ext.testLibraries.dexmaker
+  androidTestCompile rootProject.ext.testLibraries.dexmakerMockito
+  androidTestApt rootProject.ext.libraries.daggerCompiler
 }
