--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':api', ':domain', ':persistence', ':presentation'
+include ':app', ':api', ':domain', ':persistence', ':presentation', ':api-smoketest'
