--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,10 @@ buildscript {
     maven { url "https://plugins.gradle.org/m2/" }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.' + '0-alpha5'
+    classpath 'com.android.tools.build:gradle:2.1.0-alpha5'
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     classpath 'net.ltgt.gradle:gradle-apt-plugin:0.4'
-    classpath "io.realm:realm-gradle-plugin:0.88.2"
+    classpath "io.realm:realm-gradle-plugin:0.88.3"
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
